# aviasales-test-task

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: CI.yml
src/: main.py
src/api/: controllers.py  processors.py  routers.py  services.py
src/core/: interfaces.py  normalizers.py  services.py  types.py
src/core/schemas/: differences.py  itineraries.py
tests/: conftest.py
tests/api/: test_controllers.py  test_processors.py  test_services.py
tests/core/: test_normalizers.py
